--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
@@ -329,99 +329,8 @@ We will create our first combinatorial surface, an octahedron. We will not prove
 \begin{figure}[h]
 \centering
 \begin{tikzpicture}
-    \matrix (A) [matrix of math nodes, row sep=1cm, column sep=-.2cm]
-    { 
-       ~ &  ~ & ~ & ~ & ~ & \left\{\substack{{w, b, r}\\ {g, o, y}}\right\} \\  
-  ~ &  ~ & \scriptstyle\{w, b, r\} & \scriptstyle\{w, r, g\}  & \scriptstyle\{w, g, o\} & \scriptstyle\{w, o, b\} & \scriptstyle\{y, b, r\} & \scriptstyle\{y, r, g\}  & \scriptstyle\{y, g, o\} & \scriptstyle\{y, o, b\}\\
-  \scriptstyle\{w, b\} & \scriptstyle\{w,r\}  & \scriptstyle\{w,g\} & \scriptstyle\{w,o\} & \scriptstyle\{b, r\} & \scriptstyle\{r, g\}  & \scriptstyle\{g, o\} & \scriptstyle\{o, b\} & \scriptstyle\{y, b\} & \scriptstyle\{y,r\}  & \scriptstyle\{y,g\} & \scriptstyle\{y,o\}\\
-  ~ & ~ & ~ &  \scriptstyle\{w\}  & \scriptstyle\{b\} & \scriptstyle\{r\} & \scriptstyle\{g\} & \scriptstyle\{o\} & \scriptstyle\{y\}\\
-      ~ & ~ &  ~ & ~ & ~ & \emptyset \\
-    };
-    \draw (A-1-6.south)--(A-2-3.north);
-    \draw (A-1-6.south)--(A-2-4.north);
-    \draw (A-1-6.south)--(A-2-5.north);
-    \draw (A-1-6.south)--(A-2-6.north);
-    \draw (A-1-6.south)--(A-2-7.north);
-    \draw (A-1-6.south)--(A-2-8.north);
-    \draw (A-1-6.south)--(A-2-9.north);
-    \draw (A-1-6.south)--(A-2-10.north);
-
-    \draw (A-2-3.south)--(A-3-1.north);
-    \draw (A-2-3.south)--(A-3-2.north);
-    \draw (A-2-3.south)--(A-3-5.north);
-
-    \draw (A-2-4.south)--(A-3-2.north);
-    \draw (A-2-4.south)--(A-3-3.north);
-    \draw (A-2-4.south)--(A-3-6.north);
-
-    \draw (A-2-5.south)--(A-3-3.north);
-    \draw (A-2-5.south)--(A-3-4.north);
-    \draw (A-2-5.south)--(A-3-7.north);
-
-    \draw (A-2-6.south)--(A-3-4.north);
-    \draw (A-2-6.south)--(A-3-1.north);
-    \draw (A-2-6.south)--(A-3-8.north);
-
-    \draw (A-2-7.south)--(A-3-5.north);
-    \draw (A-2-7.south)--(A-3-10.north);
-    \draw (A-2-7.south)--(A-3-9.north);
-
-    \draw (A-2-8.south)--(A-3-6.north);
-    \draw (A-2-8.south)--(A-3-11.north);
-    \draw (A-2-8.south)--(A-3-10.north);
-
-    \draw (A-2-9.south)--(A-3-7.north);
-    \draw (A-2-9.south)--(A-3-12.north);
-    \draw (A-2-9.south)--(A-3-11.north);
-
-    \draw (A-2-10.south)--(A-3-8.north);
-    \draw (A-2-10.south)--(A-3-9.north);
-    \draw (A-2-10.south)--(A-3-12.north);
-
-    \draw (A-3-1.south)--(A-4-4.north);
-    \draw (A-3-1.south)--(A-4-5.north);
-
-    \draw (A-3-2.south)--(A-4-4.north);
-    \draw (A-3-2.south)--(A-4-6.north);
-
-    \draw (A-3-3.south)--(A-4-4.north);
-    \draw (A-3-3.south)--(A-4-7.north);
-
-    \draw (A-3-4.south)--(A-4-4.north);
-    \draw (A-3-4.south)--(A-4-8.north);
-
-    \draw (A-3-5.south)--(A-4-5.north);
-    \draw (A-3-5.south)--(A-4-6.north);
-
-    \draw (A-3-6.south)--(A-4-6.north);
-    \draw (A-3-6.south)--(A-4-7.north);
-
-    \draw (A-3-7.south)--(A-4-7.north);
-    \draw (A-3-7.south)--(A-4-8.north);
-
-    \draw (A-3-8.south)--(A-4-8.north);
-    \draw (A-3-8.south)--(A-4-5.north);
-
-    \draw (A-3-9.south)--(A-4-9.north);
-    \draw (A-3-9.south)--(A-4-5.north);
-
-    \draw (A-3-10.south)--(A-4-9.north);
-    \draw (A-3-10.south)--(A-4-6.north);
-
-    \draw (A-3-11.south)--(A-4-9.north);
-    \draw (A-3-11.south)--(A-4-7.north);
-
-    \draw (A-3-12.south)--(A-4-9.north);
-    \draw (A-3-12.south)--(A-4-8.north);
-
-    \draw (A-4-4.south)--(A-5-6.north);
-    \draw (A-4-5.south)--(A-5-6.north);
-    \draw (A-4-6.south)--(A-5-6.north);
-    \draw (A-4-7.south)--(A-5-6.north);
-    \draw (A-4-8.south)--(A-5-6.north);
-    \draw (A-4-9.south)--(A-5-6.north);
+\input{figs/hasse_octahedron_tikz.tex}
 \end{tikzpicture}
-
 \caption{Hasse diagram of an octahedron \( O \). The row of singletons is \( O_0 \) and above it are \( O_1 \) and \( O_2 \).}
 \label{fig:hasse_octohedron}
 \end{figure}
