--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/realization_dim2_tikz.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/realization_dim2_tikz.tex
@@ -10,8 +10,8 @@
   \arrow["{h_1}"', shorten <=27pt, shorten >=27pt, Rightarrow, from=2-1, to=3-2]
   \arrow["{h_2}", shorten <=17pt, shorten >=17pt, Rightarrow, from=2-2, to=1-3]
   \arrow[from=2-2, to=2-3]
-  \arrow["\ulcorner"{anchor=center, pos=0.125, rotate=-135}, draw=none, from=2-2, to=3-1]
-  \arrow["\ulcorner"{anchor=center, pos=0.125, rotate=180}, draw=none, from=2-3, to=1-2]
+  \arrow["\ulcorner"{pos=-0.1, rotate=-90}, draw=none, from=2-2, to=3-1]
+  \arrow["\ulcorner"{pos=0, rotate=180}, draw=none, from=2-3, to=1-2, shift left=1]
   \arrow["{\mathbb{A}_0}", from=3-1, to=2-1]
   \arrow["{\mathrm{pr}_1}"', from=3-1, to=3-2]
   \arrow["{*_{\mathbb{M}_1}}"', from=3-2, to=2-2]
