--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_torsors.tex
@@ -25,7 +25,7 @@ A \( G \)-equivariant map from \( (X,\phi) \) to \( (Y,\psi) \) is a function \(
 These lemmas lead to
 
 \begin{mycor}
-(\cite{buchholtz2023central} Corollary 5.5). The pointed type \( (BG,*) \) is a \( \K(G,1) \), that is \( BG \) is connected and has a pointed equivalence \( \loopy BG\simeq_* G \).\qed
+(\cite{buchholtz2023central} Corollary 5.5). The pointed type \( (BG,\reg{G}) \) is a \( \K(G,1) \), that is \( BG \) is connected and has a pointed equivalence \( \loopy BG\simeq_* G \).\qed
 \end{mycor}
 
 We call types \( X \) such that \( \loopy X\simeq_* G \) a \emph{delooping} of \( G \). So the type of \( G \)-torsors \( BG \) is a delooping of \( G \).
